<resources>
    <string name="app_name">VitaPet</string>
    <string name="start_session">Start Session</string>
    <string name="email_phone">E-mail or Cell Phone</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="forget_password">Did you forget your password?</string>
    <string name="enter_with">or enter with</string>
    <string name="new_user">New User</string>
    <string name="full_name">Full Name</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender:</string>
    <string name="others">Others</string>
    <string name="birth_day">Birth Day</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="conditions">I Agree Terms and Conditions</string>
    <string name="new_notices">I want to recieve a new notices</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign">Sign in</string>
    <string name="account_google">with your Google Account</string>
    <string name="username">Username</string>
    <string name="cats">Cats</string>
    <string name="dogs">Dogs</string>
    <string name="rats">Rats</string>
    <string name="hanster">Hanster</string>


    <string name="user_information">Information: </string>
    <string name="user_email">Email:</string>
    <string name="user_email_user">dllamocac@gmail.com</string>
    <string name="user_phone">Phone: </string>
    <string name="user_phone_user">940012774</string>
    <string name="user_gender">Gender: </string>
    <string name="user_gender_user">Male</string>
    <string name="user_birthday">Birthday:</string>
    <string name="user_birthday_user">11/11/2000</string>
    <string name="user_line">_______________________________________________________________________</string>
    <string name="user_pets">PETS</string>
    <string name="user_pet1">Mirlo \n Age: 1 month \n Gender: Male</string>
    <string name="user_pet3">Ricky \n Age: 1 year \n Gender: Male</string>
    <string name="users_add_pet">Add Pet</string>
    <string name="add_pet_new">Add Pet</string>
    <string name="add_pet_send">Add Pet</string>
    <string name="user_pet2">Maya \n Age: 11 months \n Gender: Female</string>

    //RECOVER ACTIVITY
    <string name="rc_lbl_title">Recover password</string>
    <string name="rc_lbl_message">If you have forgotten your password, then you damage your email.\nWe will send you a link to change the password.</string>
    <string name="rc_btn_submit">Submit</string>
    <string name="rc_resend">Not Send? Resend</string>
    <string name="rc_txt_confirmation">Confirmation code</string>

    //VERIFY ACTIVITY
    <string name="vr_lbl_title">Verify your phone</string>
    <string name="vr_lbl_message">We send a code to your phone,\n please insert here</string>
    <string name="vr_btn_verify">Verify</string>
    <string name="vr_txt_resend">Not Send? Resend</string>
    <string name="vr_txt_insert">Insert code here</string>

    //DASHBOARD
    <string name="ds_lbl_title">Hi Denis</string>
    <string name="ds_lbl_pets">Your Pets</string>
    <string name="ds_lbl_news">Latest news</string>

    //Reports
    <string name="reports_information">Weekly report</string>
    <string name="reports_description">Veterinarians you have visited most</string>
    <string name="reports_pet_description">Pets you have taken most to veterinarians</string>
    <string name="reports_others">Others</string>

    <string-array name="veterinary">
        <item>San Juan</item>
        <item>PetLife</item>
        <item>DogLove</item>
        <item>AnimalLove</item>
        <item>Others</item>
    </string-array>

</resources>
