<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUser">

    <TextView
        android:id="@+id/startsession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/new_user"
        android:textSize="40dp"
        android:textAllCaps="false"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/startsession"
        android:hint="@string/full_name"
        android:background="@drawable/edit_round"
        android:paddingLeft="10dp"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/name"
        android:hint="@string/email"
        android:background="@drawable/edit_round"
        android:paddingLeft="10dp"
        android:textAlignment="center"
        />
    <EditText
        android:id="@+id/number"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/email"
        android:hint="@string/phone_number"
        android:background="@drawable/edit_round"
        android:paddingLeft="10dp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/gender" />

    <RadioButton
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="267dp"
        android:layout_toEndOf="@+id/gender"
        android:layout_toRightOf="@+id/gender"
        />

    <ImageView
        android:id="@+id/image_male"
        android:layout_width="23dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:background="#ffffff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="153dp"
        android:layout_marginLeft="153dp"
        android:layout_marginTop="273dp"
        android:src="@drawable/masculino" />

    <ImageView
        android:id="@+id/image_female"
        android:layout_width="23dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="212dp"
        android:layout_marginLeft="212dp"
        android:layout_marginTop="273dp"
        android:background="#ffffff"
        android:src="@drawable/femenino" />

    <RadioButton
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="269dp"
        android:layout_toEndOf="@+id/male"
        android:layout_toRightOf="@+id/male" />

    <RadioButton
        android:id="@+id/other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="269dp"
        android:layout_toEndOf="@+id/female"
        android:layout_toRightOf="@+id/female"
        android:text="@string/others"
        android:textColor="#009893"/>
    <TextView
        android:id="@+id/birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/female"
        android:layout_centerHorizontal="true"
        android:text="@string/birth_day"
        android:textAllCaps="false"
        />

    <EditText
        android:id="@+id/day"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="324dp"
        android:background="@drawable/edit_round"
        android:hint="@string/day"
        android:textAlignment="center"
        android:textSize="15dp"/>

    <EditText
        android:id="@+id/month"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/birth"
        android:layout_toEndOf="@+id/day"
        android:layout_toRightOf="@+id/day"
        android:background="@drawable/edit_round"
        android:hint="@string/month"
        android:textAlignment="center"
        android:textSize="15dp" />
    <EditText
        android:id="@+id/year"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/birth"
        android:layout_toEndOf="@+id/month"
        android:layout_toRightOf="@+id/month"
        android:background="@drawable/edit_round"
        android:hint="@string/year"
        android:textAlignment="center"
        android:textSize="15dp" />
    <CheckBox
        android:id="@+id/conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/day"
        android:layout_marginTop="10dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:text="@string/conditions"
        />
    <CheckBox
        android:id="@+id/notices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/conditions"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:text="@string/new_notices"
        />
    <Button
        android:id="@+id/sing"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/notices"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:background="@drawable/button_rounded"
        />

    <TextView
        android:id="@+id/aviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sing"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:text="@string/enter_with"
        />

    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/aviso"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_social"
        android:scaleType="fitCenter"
        android:src="@drawable/face"/>

    <ImageButton
        android:id="@+id/google"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/aviso"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_social"
        android:scaleType="fitCenter"
        android:src="@drawable/twitter"/>

    <ImageButton
        android:id="@+id/twitter"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/aviso"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/button_social"
        android:scaleType="fitCenter"
        android:src="@drawable/google" />
</RelativeLayout>